crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/047.cypher
MATCH (n) RETURN n;MATCH (m) RETURN m;MATCH (k) RETURN k
